# pragmatic-real2sim2real

./: pyproject.toml
src/pr2s2r/: test.py  utils.py
src/pr2s2r/prbench/: __init__.py  core.py  utils.py
src/pr2s2r/prbench/envs/: utils.py
src/pr2s2r/prbench/envs/geom2d/: base_env.py  clutteredstorage2d.py  object_types.py  structs.py  utils.py
tests/: test_deterministic_demo_replay.py  test_deterministic_demo_resettable.py  test_envs.py  test_utils.py
tests/envs/geom2d/: test_clutteredstorage2d.py
